--- a/css/m_styles.css
+++ b/css/m_styles.css
@@ -64,7 +64,7 @@ line-height:100%;
 
 /* reset
 */
-body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,form,fieldset,input,textarea,p,blockquote,th,td {margin:0;padding:0;font-family:'メイリオ',Meiryo, 'ＭＳ Ｐゴシック',sans-serif;font-weight:normal;color:#555555;line-height:1.5;letter-spacing:0.01em;}
+body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,form,fieldset,input,textarea,p,blockquote,th,td {margin:0;padding:0;font-family:'Open Sans', sans-serif;font-weight:normal;color:#555555;line-height:1.5;letter-spacing:0.01em;}
 
 body{width:100%;height:auto;}
 
@@ -169,7 +169,7 @@ a:active  {text-decoration:underline;}
 .fs_01{font-size:77%;}
 .fs_02{font-size:85%;}
 .fs_03{font-size:93%;}
-.fs_04{font-size:100%;}
+.fs_04{font-size:14px}
 .fs_05{font-size:108%;}
 .fs_12{font-size:116%;}
 .fs_13{font-size:123.1%;}
